# lowlevel-notes

./: .gitignore  AGENTS.md  CONTENT-PLAN.md  GLOSSARY.md  README.md  SOURCES.md  build.py
.github/workflows/: deploy.yml
content/en/lowlevel/: index.md  must-know.md  phase-00-orientation.md  phase-01-foundations.md  phase-02-the-c-layer.md  phase-03-down-to-the-metal.md  phase-04-cpp.md  phase-05-systems.md  phase-06-the-project.md  phase-always-on.md  reference-registry.md  start-here.md
content/es/lowlevel/: index.md  must-know.md  phase-00-orientation.md  start-here.md
examples/: .gitignore
examples/assembly-and-compiler-output/addressing-modes-and-memory-operands/: demo.c
examples/assembly-and-compiler-output/arm64-appendix-aarch64-registers-and-calling-convention/: demo.c  run.sh
examples/assembly-and-compiler-output/control-flow-jumps-conditions-and-flags/: demo.c  run.sh
examples/assembly-and-compiler-output/core-instruction-set-mov-arithmetic-lea/: demo.c  run.sh
examples/assembly-and-compiler-output/how-c-constructs-compile-loops-structs-switch/: demo.c  run.sh
examples/assembly-and-compiler-output/inline-assembly-and-when-to-reach-for-it/: demo.c  run.sh
examples/assembly-and-compiler-output/optimization-what-o2-does-to-your-code/: demo.c  run.sh
examples/assembly-and-compiler-output/stack-at-the-assembly-level/: demo.c  run.sh
examples/c-from-the-metal/arrays-and-array-to-pointer-decay/: demo.c
examples/toolchain-and-linking/cmake-when-make-isnt-enough/: CMakeLists.txt  main.c  message.c  message.h  run.sh
static/assets/: atlas.css
(+238 files in other folders)
